overflow issue fix

--- a/src/components/app-content-card/app-content-card.css
+++ b/src/components/app-content-card/app-content-card.css
@@ -4,6 +4,7 @@
   border-radius: 10px;
   background-color: #ffffff;
   height: calc(100vh - 75px - 100px);
+  overflow: auto;
 }
 
 .has-bottom-buttons {
